--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codeflix</title>
+    <link rel="stylesheet" href="./styles/normalize.css"> <!--importante que siempre este al principio para que no sobreescriba otros estilos-->
+    <link rel="stylesheet" href="./styles/common.css">
+    <link rel="stylesheet" href="./styles/footer.css">
+    <!-- 
     <style> 
      /*
     selector de id
@@ -18,7 +22,7 @@
         background-color: white;
     }
     .purple {
-        color: purple;
+        color: purple !important;
     }
     /*
     selector de tag
@@ -34,20 +38,24 @@
     
 
     </style>
+    -->
 </head>
-<body>
+<body class="main-bg">
     <h1 id="title">CodeFlix</h1> <!--h1 solo uno por pagina. No tiene que ser siempre visible, se luede mostrar solo a lectores de paginas-->
     <h2>Shows</h2> <!--No saltar niveles-->
     <h3>Heading 3</h3>
     <hr> <!--cambia lo que estamos haciendo, es un corte, es un break de tema-->
-    <p class="white-bg purple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
-         voluptatibus quia, recusandae, error nulla repellendus debitis exercitationem quidem voluptates nam ab 
+    <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
+         voluptatibus quia, recusandae, error nulla repellendus debitis <strong> quidem voluptates</strong> nam ab 
          tempora atque libero?</p>
     <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
-         voluptatibus quia, recusandae, error nulla repellendus debitis exercitationem quidem voluptates nam ab 
+         voluptatibus quia, recusandae,<a href="test.html"> error nulla repellendus debitis</a>exercitationem quidem voluptates nam ab 
          tempora atque libero?</p>
     <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
-         voluptatibus quia, recusandae, error nulla repellendus debitis exercitationem quidem voluptates nam ab 
+         voluptatibus quia, recusandae, <strong>nulla repellendus debitis exercitationem </strong>quidem voluptates nam ab 
          tempora atque libero?</p>
+    <footer class="footer">
+        <p>2024 <strong>Codefix</strong>. All rigths reserved</p>
+    </footer>
 </body>
 </html>
