--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/normalize.css"> <!--importante que siempre este al principio para que no sobreescriba otros estilos-->
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/banner.css">
     <!-- 
     <style> 
      /*
@@ -45,6 +46,11 @@
     <h2>Shows</h2> <!--No saltar niveles-->
     <h3>Heading 3</h3>
     <hr> <!--cambia lo que estamos haciendo, es un corte, es un break de tema-->
+    <div class="content">
+        <p class="heading-1">Unlimited movies, Tv shows, and more</p>
+        <p class="heading-2">Watch anywhere. Cancel anytime</p>
+        <p>Ready to watch</p>
+    </div>
     <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
          voluptatibus quia, recusandae, error nulla repellendus debitis <strong> quidem voluptates</strong> nam ab 
          tempora atque libero?</p>
