--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/banner.css">
+    <link rel="stylesheet" href="./styles/header.css
+    ">
     <!-- 
     <style> 
      /*
@@ -42,15 +44,29 @@
     -->
 </head>
 <body class="main-bg">
+    <header class="header">
+        <img src="./assets/app/codeflix.png" alt="">
+    <nav class="nav">
+        <ul class="list">
+            <li>
+                <a href="#title">All shows</a>
+            </li>
+            <li>
+                <a href="./signin.html">Sign in</a>
+                <a href="https://google.com" target="_blank">Google</a>
+            </li>
+        </ul>
+    </nav>
+    </header>
     <h1 id="title">CodeFlix</h1> <!--h1 solo uno por pagina. No tiene que ser siempre visible, se luede mostrar solo a lectores de paginas-->
     <h2>Shows</h2> <!--No saltar niveles-->
     <h3>Heading 3</h3>
     <hr> <!--cambia lo que estamos haciendo, es un corte, es un break de tema-->
-    <div class="content">
+    <section class="content">
         <p class="heading-1">Unlimited movies, Tv shows, and more</p>
         <p class="heading-2">Watch anywhere. Cancel anytime</p>
         <p>Ready to watch</p>
-    </div>
+    </section>
     <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
          voluptatibus quia, recusandae, error nulla repellendus debitis <strong> quidem voluptates</strong> nam ab 
          tempora atque libero?</p>
