--- a/index.html
+++ b/index.html
@@ -62,11 +62,14 @@
     <h2>Shows</h2> <!--No saltar niveles-->
     <h3>Heading 3</h3>
     <hr> <!--cambia lo que estamos haciendo, es un corte, es un break de tema-->
-    <section class="content">
-        <p class="heading-1">Unlimited movies, Tv shows, and more</p>
-        <p class="heading-2">Watch anywhere. Cancel anytime</p>
-        <p>Ready to watch</p>
-    </section>
+    <div class="banner">
+        <div class="image"></div>
+        <div class="content">
+            <p class="heading-1">Unlimited movies, Tv shows, and more</p>
+            <p class="heading-2">Watch anywhere. Cancel anytime</p>
+            <p>Ready to watch</p>
+        </div>
+    </div> 
     <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
          voluptatibus quia, recusandae, error nulla repellendus debitis <strong> quidem voluptates</strong> nam ab 
          tempora atque libero?</p>
