--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/banner.css">
-    <link rel="stylesheet" href="./styles/header.css
-    ">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/componentes.css">
     <!-- 
     <style> 
      /*
@@ -49,11 +49,11 @@
     <nav class="nav">
         <ul class="list">
             <li>
-                <a href="#title">All shows</a>
+                <a class="btn hide" href="#title">All shows</a>
             </li>
             <li>
-                <a href="./signin.html">Sign in</a>
-                <a href="https://google.com" target="_blank">Google</a>
+                <a class="btn" href="./signin.html">Sign in</a>
+                <!--<a class="btn" href="https://google.com" target="_blank">Google</a>-->
             </li>
         </ul>
     </nav>
