--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/banner.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/componentes.css">
+    <link rel="stylesheet" href="./styles/info.css">
     <!-- 
     <style> 
      /*
@@ -70,6 +71,7 @@
             <p>Ready to watch</p>
         </div>
     </div> 
+    <main class="main">
     <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
          voluptatibus quia, recusandae, error nulla repellendus debitis <strong> quidem voluptates</strong> nam ab 
          tempora atque libero?</p>
@@ -79,6 +81,16 @@
     <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
          voluptatibus quia, recusandae, <strong>nulla repellendus debitis exercitationem </strong>quidem voluptates nam ab 
          tempora atque libero?</p>
+    <iframe src="" frameborder="0" width="" height=""></iframe>
+    <section class="info">
+        <h2 class="heading-2">Watch everywhere</h2>
+        <p>Stream unlimited movies and TV shows on your, phone, tablet, laptop, and TV.</p>
+        <div class="assets">
+            <video src="./assets/app/video-devices.m4v" muted autoplay loop></video>
+            <img src="./assets/app/device-pile.png" alt="">
+        </div>
+    </section>
+    </main>
     <footer class="footer">
         <p>2024 <strong>Codefix</strong>. All rigths reserved</p>
     </footer>
