--- a/index.html
+++ b/index.html
@@ -58,30 +58,31 @@
             </li>
         </ul>
     </nav>
-    </header>
-    <h1 id="title">CodeFlix</h1> <!--h1 solo uno por pagina. No tiene que ser siempre visible, se luede mostrar solo a lectores de paginas-->
-    <h2>Shows</h2> <!--No saltar niveles-->
+</header>
+    <!--
+    <h1 id="title">CodeFlix</h1> h1 solo uno por pagina. No tiene que ser siempre visible, se luede mostrar solo a lectores de paginas
+    <h2>Shows</h2> --No saltar niveles
     <h3>Heading 3</h3>
-    <hr> <!--cambia lo que estamos haciendo, es un corte, es un break de tema-->
-    <div class="banner">
+    <hr> --cambia lo que estamos haciendo, es un corte, es un break de tema
+    -->
+    <section class="banner">
         <div class="image"></div>
         <div class="content">
             <p class="heading-1">Unlimited movies, Tv shows, and more</p>
             <p class="heading-2">Watch anywhere. Cancel anytime</p>
             <p>Ready to watch</p>
         </div>
-    </div> 
+    </section>
     <main class="main">
-    <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
-         voluptatibus quia, recusandae, error nulla repellendus debitis <strong> quidem voluptates</strong> nam ab 
-         tempora atque libero?</p>
-    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
-         voluptatibus quia, recusandae,<a href="test.html"> error nulla repellendus debitis</a>exercitationem quidem voluptates nam ab 
-         tempora atque libero?</p>
-    <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
+        <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
+            voluptatibus quia, recusandae, error nulla repellendus debitis <strong> quidem voluptates</strong> nam ab 
+            tempora atque libero?</p>
+        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
+                voluptatibus quia, recusandae,<a href="test.html"> error nulla repellendus debitis</a>exercitationem quidem voluptates nam ab 
+                tempora atque libero?</p>
+        <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
          voluptatibus quia, recusandae, <strong>nulla repellendus debitis exercitationem </strong>quidem voluptates nam ab 
          tempora atque libero?</p>
-    <iframe src="" frameborder="0" width="" height=""></iframe>
     <section class="info">
         <h2 class="heading-2">Watch everywhere</h2>
         <p>Stream unlimited movies and TV shows on your, phone, tablet, laptop, and TV.</p>
