add: modified styles of the info section and add mediaqueries

--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
          voluptatibus quia, recusandae, <strong>nulla repellendus debitis exercitationem </strong>quidem voluptates nam ab 
          tempora atque libero?</p>
     <section class="info">
-        <h2 class="heading-2">Watch everywhere</h2>
-        <p>Stream unlimited movies and TV shows on your, phone, tablet, laptop, and TV.</p>
+        <div>
+            <h2 class="heading-2">Watch everywhere</h2>
+            <p>Stream unlimited movies and TV shows on your, phone, tablet, laptop, and TV.</p>
+        </div>
         <div class="assets">
             <video src="./assets/app/video-devices.m4v" muted autoplay loop></video>
             <img src="./assets/app/device-pile.png" alt="">
