--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codeflix</title>
+    <meta property ="og.title" content="Codeflix">
+    <meta property ="og:description" content="Codeflix - Keepcoding HTML & CSS examples">
+    <meta property ="og:image" content="https://github.com/KeepCodingWeb18/html-css/blob/main/assets/app/catalog.jpg?raw=true">
     <link rel="stylesheet" href="./styles/normalize.css"> <!--importante que siempre este al principio para que no sobreescriba otros estilos-->
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/footer.css">
