update: sginin.html

--- a/signin.html
+++ b/signin.html
@@ -47,11 +47,23 @@
             <textarea name="bio" id="bio" rows="6"></textarea>
         </div>
         <div>
+            <button type="button">click</button>      
+        </div>
+        <div>
+            <label for="country">Country</label>
+            <select name="country" id="country">
+                <option value="es">España</option>
+                <option value="co">Colombia</option>
+                <option value="usa">Usa</option>
+            </select>
+        </div>
+        <div>
             <label for="remember">Remember me</label>
             <input type="checkbox" name="remember" id="remember">
         </div>
         <div>
-            <button>Guardar</button>      
+            <input type="reset" name="" id="" value="guardar">
+            <button type="submit">Guardar</button>      
         </div>
     </form> 
 </body>
