--- a/grid-example.html
+++ b/grid-example.html
@@ -9,36 +9,46 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             grid-template-rows: 80px 20vh 50vh 100px;
-            
+            grid-template-areas: 
+              "header header header"
+              "section section section"
+              "aside main main"
+              "footer footer footer";
+              
         }
         header{
-            /* background-color: orange;
-            grid-column-start:1 ;
+            background-color: orange;
+            grid-area: header;
+            /* grid-column-start:1 ;
             grid-column-end: 4;
             grid-row-start: 1;
-            grid-row-end: 2; */
-            grid-row: 1 / 2;
-            grid-column: 1 / 4;
+            grid-row-end: 2; */ */
+            /* grid-row: 1 / 2;
+            grid-column: 1 / 4; */
         }
         section {
             background-color: aqua;
-            grid-row: 2 / 3;
-            grid-column: 1 / 4;
+            grid-area: section;
+            /* grid-row: 2 / 3;
+            grid-column: 1 / 4; */
         }
         aside{
             background-color: blueviolet;
-            grid-column: 1 / 2;
-            grid-row: 3 / 4;
+            grid-area: aside;
+            /* grid-column: 1 / 2;
+            grid-row: 3 / 4; */
         }
         main{
             background-color: yellow;
-            grid-column: 2 / 4;
-            grid-row: 3 / 4;
+            grid-area: main;
+            /* grid-column: 2 / 4;
+            grid-row: 3 / 4; */
         }
         footer{
             background-color: green;
-            grid-column: 1 / 4;
-            grid-row: 4 / 5;
+            grid-area: footer;
+            /* grid-column: 1 / 4;
+            grid-row: 4 / 5; */
         }
     </style>
 </head>
