--- a/advent.html
+++ b/advent.html
@@ -17,23 +17,34 @@
            border-radius: 5px; 
            color: white;
            font-size: 2rem;
+           grid-column: span;
+           grid-row: span;
+        }
+        .tall{
+            background-color: red;
+            grid-row: span 2;
+        }
+
+        .wide {
+            background-color: green;
+            grid-column: span 2;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="item">1</div>
+        <div class="item tall">1</div>
         <div class="item">2</div>
-        <div class="item">3</div>
+        <div class="item wide">3</div>
         <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
+        <div class="item wide">5</div>
+        <div class="item wide">6</div>
         <div class="item">7</div>
-        <div class="item">8</div>
+        <div class="item tall">8</div>
         <div class="item">9</div>
         <div class="item">10</div>
         <div class="item">11</div>
-        <div class="item">12</div>
+        <div class="item tall">12</div>
         <div class="item">13</div>
         <div class="item">14</div>
 
