--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/componentes.css">
     <link rel="stylesheet" href="./styles/info.css">
+    <link rel="stylesheet" href="./styles/shows.css">
     <!-- 
     <style> 
      /*
@@ -77,15 +78,6 @@
         </div>
     </section>
     <main class="main">
-        <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
-            voluptatibus quia, recusandae, error nulla repellendus debitis <strong> quidem voluptates</strong> nam ab 
-            tempora atque libero?</p>
-        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
-                voluptatibus quia, recusandae,<a href="test.html"> error nulla repellendus debitis</a>exercitationem quidem voluptates nam ab 
-                tempora atque libero?</p>
-        <p class="white-bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut facilis ex sit praesentium! Dolorem beatae
-         voluptatibus quia, recusandae, <strong>nulla repellendus debitis exercitationem </strong>quidem voluptates nam ab 
-         tempora atque libero?</p>
     <section class="info">
         <div>
             <h2 class="heading-2">Watch everywhere</h2>
@@ -95,6 +87,67 @@
             <video src="./assets/app/video-devices.m4v" muted autoplay loop></video>
             <img src="./assets/app/device-pile.png" alt="">
         </div>
+    </section>
+    <section>
+        <section class="new-shows">
+            <h2>New shows</h2>
+            <ul class="list">
+                <li>
+                    <figure>
+                        <img src="./assets/series/serie_1.jpg" alt="portada serie 1">
+                        <figcaption>Show 1</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./assets/series/serie_2.jpg" alt="portada serie 2">
+                        <figcaption>Show 2</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./assets/series/serie_3.jpg" alt="portada serie 3">
+                        <figcaption>Show 3</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./assets/series/serie_4.jpg" alt="portada serie 4">
+                        <figcaption>Show 4</figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2>Popular</h2>
+            <ul class="list">
+                <li>
+                    <figure>
+                        <img src="./assets/series/serie_5.jpg" alt="portada serie 5">
+                        <figcaption>Show 5</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./assets/series/serie_6.jpg" alt="portada serie 6">
+                        <figcaption>Show 6</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./assets/series/serie_7.jpg" alt="portada serie 7">
+                        <figcaption>Show 7</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./assets/series/serie_8.jpg" alt="portada serie 8">
+                        <figcaption>Show 8</figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </section>
     </section>
     </main>
     <footer class="footer">
