update: index.html and styles

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
     </style>
     -->
+
+    
 </head>
 <body class="main-bg">
     <header class="header">
@@ -88,7 +90,7 @@
             <img src="./assets/app/device-pile.png" alt="">
         </div>
     </section>
-    <section>
+    <section class="all-shows">
         <section class="new-shows">
             <h2>New shows</h2>
             <ul class="list">
