--- a/responsive.html
+++ b/responsive.html
@@ -28,9 +28,9 @@
     </picture>
     <!--3. srcset-->
     <img src="./assets/responsive-images/dog_c_scalew_1089.jpg" 
-    srcset= "./assets/responsive-images/dog_c_scalew_591.jpg 1x,
-    ./assets/responsive-images/dog_c_scalew_1089.jpg 2x,
-    ./assets/responsive-images/dog_c_scalew_1352.jpg 3x
+    srcset= "./assets/responsive-images/dog_c_scalew_591.jpg 591w,
+    ./assets/responsive-images/dog_c_scalew_1089.jpg 1089w,
+    ./assets/responsive-images/dog_c_scalew_1352.jpg 1352w
     "
     >
 </body>
